fix(styles): fix for retaining a gap between search input and 1st option

--- a/packages/crayons-core/src/components/select/select.scss
+++ b/packages/crayons-core/src/components/select/select.scss
@@ -84,7 +84,7 @@ $placeholder-color: $color-smoke-300;
 
     input {
       flex-grow: 1;
-      width: 100%;
+      // width: 100%;
       border: none;
       font-family: inherit;
       font-size: $font-size-14;
